--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,43 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;600&display=swap');
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: url('../public/imgs/front_page_background.gif');
+  background-size: cover;
+  font-family: "Nunito Sans";
 }
 
-a {
-  color: inherit;
+a{
+  color:black;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+a:hover{
+  color:grey;
+}
+
+
+
+nav{
+  margin: 10px auto 80px;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: white;
+}
+
+nav a{
+  margin-left:12px;
+}
+nav.logo{
+  margin-right:auto;
+}
+
+footer{
+  display:block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  color:green;
+  background-color: white;
 }
