--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;600&display=swap');
 
 body {
-  background-image: url('../public/imgs/front_page_background.gif');
-  background-repeat: none;
+  background: url('../public/imgs/mountain_back.jpg') no-repeat center fixed;
   background-size: cover;
   font-family: "Nunito Sans";
 }
-
 a{
   color:black;
   text-decoration: none;
@@ -16,15 +14,12 @@ a:hover{
   color:grey;
 }
 
-
-
-
-
 footer{
-  display:block;
-  text-align: center;
-  padding: 30px 0;
-  margin-top: 60px;
-  color:green;
+  position:relative;
+  bottom: 0px;
+  width: auto;
   background-color: white;
+
 }
+
+
