Add logo to navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,12 @@ footer{
 .card:hover{
   transform: 1.2;
 }
+
+.image_wrapper{
+  box-sizing: content-box;
+}
+
+.logo {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
+}
