--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,8 @@ footer{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 5px;
 }
+
+.card-title{
+  font-family: 'Nunito Sans';
+  font-size: xx-large;
+}
